<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:paddingBottom="@dimen/activity_vertical_margin"
    android:paddingLeft="@dimen/activity_horizontal_margin"
    android:paddingRight="@dimen/activity_horizontal_margin"
    android:paddingTop="@dimen/activity_vertical_margin"
    tools:context="com.campusclipper.android.HomeActivity$PlaceholderFragment" >

    <EditText
        android:id="@+id/editText1F"
        android:layout_width="fill_parent"
        android:layout_height="wrap_content"
        android:layout_alignBottom="@+id/textView1F"
        android:layout_marginLeft="52dp"
        android:layout_toRightOf="@+id/textView1F"
        android:ems="10" >

        <requestFocus />
    </EditText>

    <Button
        android:id="@+id/buttonEntertainmentF"
        android:layout_width="140dp"
        android:layout_height="40dp"
        android:layout_alignLeft="@+id/buttonSchoolF"
        android:layout_below="@+id/buttonServicesF"
        
        android:text="@string/category_button_title_entertainment" />

    <Button
        android:id="@+id/buttonServicesF"
        android:layout_width="140dp"
        android:layout_height="40dp"
        android:layout_alignLeft="@+id/buttonEntertainmentF"
        android:layout_below="@+id/buttonHealthF"
        android:text="@string/category_button_title_services" />

    <Button
        android:id="@+id/buttonClothingF"
        android:layout_width="140dp"
        android:layout_height="40dp"
        android:layout_alignLeft="@+id/buttonServicesF"
        android:layout_below="@+id/buttonEntertainmentF"
        android:text="@string/category_button_title_clothing" />

    <Button
        android:id="@+id/buttonAllF"
        android:layout_width="140dp"
        android:layout_height="40dp"
        android:layout_alignLeft="@+id/textView1F"
        android:layout_below="@+id/textView1F"
        android:text="@string/category_button_title_all" />

    <Button
        android:id="@+id/buttonHealthF"
        android:layout_width="140dp"
        android:layout_height="40dp"
        android:layout_alignLeft="@+id/buttonAllF"
        android:layout_below="@+id/buttonSchoolF"
        android:text="@string/category_button_title_health" />

    <Button
        android:id="@+id/buttonSchoolF"
        android:layout_width="140dp"
        android:layout_height="40dp"
        android:layout_alignLeft="@+id/buttonHealthF"
        android:layout_below="@+id/buttonAllF"
        android:text="@string/category_button_title_school" />

    <TextView
        android:id="@+id/textView1F"
        android:layout_width="140dp"
        android:layout_height="40dp"
        android:layout_alignParentLeft="true"
        android:layout_alignParentTop="true"
        android:layout_marginTop="49dp"
        android:text="@string/label_search_button" />

</RelativeLayout>