<?xml version="1.0" encoding="utf-8"?>
<!--
     Copyright (C) 2012 The Android Open Source Project

     Licensed under the Apache License, Version 2.0 (the "License");
     you may not use this file except in compliance with the License.
     You may obtain a copy of the License at

          http://www.apache.org/licenses/LICENSE-2.0

     Unless required by applicable law or agreed to in writing, software
     distributed under the License is distributed on an "AS IS" BASIS,
     WITHOUT WARRANTIES OR CONDITIONS OF ANY KIND, either express or implied.
     See the License for the specific language governing permissions and
     limitations under the License.
-->
<!-- This can go anywhere in your layout (see other demos for some examples). -->
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:orientation="vertical" >

    <TextView
        android:id="@+id/message_text"
        android:layout_width="match_parent"
        android:layout_height="1dp"
        android:visibility="invisible" />

  <TextView
      android:id="@+id/top_text"
      android:layout_width="match_parent"
      android:layout_height="1dp"
      android:lines="2"
      android:text="@string/drag_melbourne"
      android:visibility="invisible" />

  <LinearLayout
    android:layout_width="match_parent"
    android:layout_height="1dp" >

    <CheckBox
        android:id="@+id/flat"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/flat"
        android:textSize="14sp"
        android:visibility="invisible" />

    <TextView
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginLeft="8dp"
        android:text="@string/rotation"
        android:visibility="invisible" />

    <SeekBar
        android:id="@+id/rotationSeekBar"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:visibility="invisible" />

  </LinearLayout>
    <RelativeLayout
        android:layout_width="match_parent"
        android:layout_height="match_parent" >

        <fragment
            android:id="@+id/map"
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            class="com.google.android.gms.maps.SupportMapFragment" />

        <LinearLayout
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_alignParentBottom="true"
            android:layout_alignParentRight="true"
            android:background="#D000"
            android:orientation="vertical"
            android:padding="5dp"
            android:visibility="invisible" >

            <Button
                android:id="@+id/get_my_location_button"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:padding="8dp"
                android:text="@string/my_location" />

            <RadioGroup
                android:id="@+id/custom_info_window_options"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content" >

                <RadioButton
                    android:id="@+id/default_info_window"
                    android:checked="true"
                    android:text="@string/default_info_window" />
                <RadioButton
                    android:id="@+id/custom_info_contents"
                    android:text="@string/custom_info_contents" />

                <RadioButton
                    android:id="@+id/custom_info_window"
                    android:text="@string/custom_info_window" />
            </RadioGroup>
        </LinearLayout>

    </RelativeLayout>

</LinearLayout>